# synova-ai

./: .actionlint.yaml  .env.example  .env.local  .env.production  .eslintignore  .eslintrc.js  .prettierrc.js  App.js  COMPLETE-BEGINNERS-GUIDE.md  COMPLETE_SETUP.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  FILE-CHECKLIST-QUICKSTART.md  HOWTO.md  README.md  Ultimate-Setup-Guide.md  alembic.ini  app.json  aurasync-chat.html  babel.config.js  behavioral_prediction_matrix.py  capture_screenshots.py  chart_script.py  create-synova-project.py  cspell.json  database.py  docker-compose.prod.yml  docker-compose.yml  eas.json  ethical_singularity_guardian.py  example_api_client.py  generate_pdf_simple.py  generate_secret.py  index.html  init_db.py  main.py  metro.config.js  mkpdf.py  mkpdf_with_screenshots.py  (+34 more)
.github/workflows/: android-build.yml  ci-cd.yml  deploy.yml  docs-lint.yml  ecs-deploy.yml  electron-build.yml  ios-fastlane.yml  lint.yml  python-ci.yml
alembic/versions/: 9e9c42807776_create_messages_table.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/core/: config.py
app/models/: __init__.py  (+1 more)
fastlane/: Fastfile-DESKTOP-ILF0GQ5
models/: __init__.py  message.py
screens/: HomeScreen.js  NeuralScreen.js  QuantumScreen.js
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_complete_beginners_guide.py  test_crud.py  test_db.py  test_deploy_script.py  test_electron_workflow.py  test_main.py  test_main_api.py  test_messages.py  test_models.py  test_self_evolution_core.py  test_synova_core.py
(+8 files in other folders)
